--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,13 @@ services:
       - weather
     depends_on:
       - app
+  redis:
+    image: redis:latest
+    container_name: app_redis
+    ports:
+      - "6382:6379"
+    networks:
+      - weather
 volumes:
   socket:
 networks:
